# Araneae

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
GraphFile/: readme
GraphFile/Basics/: HashScan.sh  ObjectAttributesScan.sh  readme
GraphFile/Relationship Directory/: NameSimilarityDirectory.py  TimeSimilarityDirectory.py
GraphFile/Relationship Visualization/: Graph1.py
GraphFile/Similarity Clustering/: TimeClustering.py
GraphFile/Similarity Clustering/time_clustering/Apr_10_2019-Apr_10_2019/: 10-a4.mli  14-a4.ml  24-a1.ml  44-a1.cmi  63-a3.mli.depends  68-ocamlc.where
GraphFile/Similarity Clustering/time_clustering/Apr_15_2019-Apr_18_2019/: 0-a1.ml  17-a3.mly  26-a3.cmo  35-a1.ml
GraphFile/Similarity Clustering/time_clustering/Apr_17_2019-Apr_18_2019/: 29-_log
GraphFile/Similarity Clustering/time_clustering/Apr_19_2019-Apr_19_2019/: 5-fifth.html
GraphFile/Similarity Clustering/time_clustering/Apr_25_2019-Apr_26_2019/: 4-explorer.ps
GraphFile/Similarity Clustering/time_clustering/Apr_27_2019-Apr_28_2019/: 24-lexer.cmi
GraphFile/Similarity Clustering/time_clustering/Apr_27_2019-Apr_29_2019/: 4-commands.cmo
GraphFile/Similarity Clustering/time_clustering/Feb_11_2019-Feb_13_2019/: 0-output
GraphFile/Similarity Clustering/time_clustering/Feb_17_2019-Feb_17_2019/: 6-mat2.txt  9-conv_normal.cpp
GraphFile/Similarity Clustering/time_clustering/Jun_12_2019-Jun_12_2019/: 0-find_similarities_between_images.py
GraphFile/Similarity Clustering/time_clustering/Mar_11_2019-Mar_12_2019/: 1-a3.mly  13-a2.mll  28-a1.cmi  3-_log  32-a1.cmo
GraphFile/Similarity Clustering/time_clustering/Mar_12_2019-Mar_13_2019/: 7-a2.cmo
GraphFile/Similarity Clustering/time_clustering/Mar_13_2019-Mar_14_2019/: 3-a3.cmo
GraphFile/Similarity Clustering/time_clustering/Mar_16_2019-Mar_17_2019/: 1-Specifications.h  22-simulation1.webm  3-AddVehicleEvent.h
GraphFile/Similarity Clustering/time_clustering/Mar_20_2019-Mar_21_2019/: 11-a3.mli  3-a4.cmo
GraphFile/Similarity Clustering/time_clustering/Mar_28_2019-Mar_28_2019/: 3-a0.ml
GraphFile/Similarity Clustering/time_clustering/Mar_9_2019-Mar_10_2019/: 12-a1.mli  16-a1.mli.depends  (+1 more)
GraphFile/Test - Relationship Visualization/: graphdata3
Wilbur/: CleanTimeDirectory.sh  readme
Wilbur/Basics/: TimeDirectory.sh  TimeDirectory3.sh
Wilbur/Relationship Visualization/: graphdata5
Wilbur/Relationship Visualization - Drive/: ContainsRelationship.sh
Wilbur/Relationship Visualization - Drive and Gmail/: ContainsRelationship.sh  email_metadata.py
Wilbur/Relationship Visualization - Drive/demos/: usage-elements-extra.py
Wilbur/Similarity Clustering/: ContentSimilarityNLP.py  ContentSimilarityString.py
Wilbur/Similarity Clustering/ProgramOutput/: NameandTimeclusterUbuntu2  NameclusterUbuntu
Wilbur/Time Directory/: readme
docs/wilbur/: .gitignore
src/Wilbur/: PhotoSimilarityHash.py  readme.odt
src/Wilbur/Audit Log/: MostFrequentAccesses.py  accesslog
src/Wilbur/Basics/: ContainsRelationship  ContainsRelationshipScan.sh  HashRelationship  HashScan.cpp  Hashes  ObjectAttributes  TimeDirectory2.sh  TimeDirectorySummarize.sh  mysqlline
src/Wilbur/File-Size Graphs/: readme  sizehistogram.py
src/Wilbur/Relationship Directory/: ContentSimilarityDirectory.py  RelationshipDirectory.py  readme
src/Wilbur/Relationship Visualization/: ContainsRelationship.sh  FileTime.py  Graph2.py  Graph3.py  Graph4.py  GraphVisualization2.py  graphdata5  readme
src/Wilbur/Relationship Visualization - Drive/: DriveAndSystemRelations.py  credentials.json  readme  token.pickle
src/Wilbur/Relationship Visualization - Drive and Gmail/: Drive,GmailAndSystemRelations.py  FileTime.py  GraphVisualization2.py  MostFrequentAccesses.py  accesslog  email_metadata  readme
src/Wilbur/Similarity Clustering/: ContentSimilarityHash.py  ContentSimilaritySys.py  NameClustering.py  readme
src/Wilbur/Test - Relationship Visualization/: GraphVisualization.py  graph.html  graphdata1  graphdata2  readme
src/Wilbur/Time Directory/: TimeDirectory.py  TimeDirectoryDeeper.py  TimeDirectoryDeeperLocation.py  TimeDirectoryDeeperTime.py
src/Wilbur/Type Directory/: TypeDirectoryDeeper.py  readme
src/hobo/: README.md  meson.build
src/hobo/fs/: hobofs.c  meson.build
src/hobo/include/: hobofs.h
src/hobo/lib/: .gitignore  access.c  destroy.c  getattr.c  hobo-list.h  hobo.c  hobo.h  hobodb-types.c  hobodb-types.h  hobodb-util.c  hobodb-util.h  hobodb.c  hobodb.h  init.c  ino-lookup.c  ino-lookup.h  lookup.c  meson.build  mkdir.c  open.c  opendir.c  readdir.c  releasedir.c
src/hobo/test/: meson.build
src/hobo/test/hobo/: meson.build  testhobo.c
src/hobo/test/munit/: Makefile  Makefile.am  Makefile.in  meson.build  munit.c
src/hobo/uri/: meson.build  processuri.py  uri-schemes-1.csv  urischemes.c  urischemes.h
src/tarantula/: README.md
src/tarantula/tnative/: .gitignore  kdfilesx64.ini  tnative.sln
src/tarantula/tnlinux/: tnlinux.sln
(+834 files in other folders)
